Maven gwt debug configuration
git-svn-id: svn://46.137.95.166/poptavka@1060 61682b0c-635e-44ba-a85b-d27e7dc34134