@@ -256,13 +256,45 @@
     </dependencies>
     <profiles>
         <profile>
+            <id>maven-gwt-debug</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>gwt-maven-plugin</artifactId>
+                    <version>${gwt.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>gwt-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <extraJvmArgs>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8001 -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=256m</extraJvmArgs>
+                            <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
+                            <runTarget>Poptavka.html</runTarget>
+                            <compileReport>true</compileReport>
+                            <logLevel>INFO</logLevel>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>jrebel</id>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>gwt-maven-plugin</artifactId>
-                        <version>2.4.0</version>
                         <executions>
                             <execution>
                                 <goals>
@@ -304,30 +336,9 @@
         <finalName>poptavka</finalName>
         <outputDirectory>${project.build.directory}/poptavka/WEB-INF/classes</outputDirectory>
         <plugins>
-            <!--
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>2.3.0-1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.google.gwt</groupId>
-                        <artifactId>gwt-user</artifactId>
-                        <version>2.4.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>com.google.gwt</groupId>
-                        <artifactId>gwt-dev</artifactId>
-                        <version>2.4.0</version>
-                    </dependency>
-                </dependencies>
 
                 <executions>
                     <execution>
@@ -395,7 +406,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>2.4.0</version>
                 <reportSets>
                     <reportSet>
                         <reports>
